// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit, color: inherit and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,black) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit, color: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,black) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit, color: primary and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#FBFCFF) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#010205) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: contrast-high and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#AFB0B3) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: contrast-high and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#535457) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: contrast-low and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#404044) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: contrast-low and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#D8D8DB) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: contrast-medium and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#88898C) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: contrast-medium and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#6B6D70) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: inherit and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,black) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,black) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: primary and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#FBFCFF) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: var(--p-model-signature-color,#010205) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: cayenne, safe-zone: false, size: small, color: primary and theme: auto 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,245px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.2556201.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 35 !important;
  background: var(--p-model-signature-color,#010205) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}

@media (prefers-color-scheme: dark) {
  :host {
    background: var(--p-model-signature-color,#FBFCFF) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: cayenne, safe-zone: false, size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,245px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.2556201.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 35 !important;
  background: var(--p-model-signature-color,#010205) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: cayenne, safe-zone: true, size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,245px);
  height: var(--p-model-signature-height,auto);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.2556201.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 36 !important;
  background: var(--p-model-signature-color,#010205) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;
